--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ package.edition = "2024"
 package.version = "0.1.0"
 package.license = "0BSD"
 package.repository = "https://github.com/SludgePhD/Ballpark"
+package.rust-version = "1.85.0" # (keep this in sync with `ci.yaml`)
 
 [package]
 name = "ballpark"
@@ -12,6 +13,7 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 categories = ["mathematics", "no-std::no-alloc", "algorithms"]
 keywords = ["ulp", "ulps", "approx", "equality"]
 
