--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,7 @@ jobs:
     - name: Install Rust toolchain
       run: |
         rustup install ${{ env.MSRV }} --profile=minimal
+        rustup default ${{ env.MSRV }}
         rustup install nightly --profile=minimal
 
     - name: Install CI/CD tooling
